kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: usr-workshop
  namespace: workshop-demo
  labels:
    app: usr-workshop
    app.kubernetes.io/component: usr-workshop
    app.kubernetes.io/instance: usr-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: usr-workshop
  template:
    metadata:
      labels:
        deployment: usr-workshop
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: usr-workshop
          image: >-
            image-registry.openshift-image-registry.svc:5000/workshop-demo/usr-workshop@sha256:85a232e55cf7e5bf25192aaece523ccaeae0c5ee5c464866979b5c11215e409d
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
