kubernetes/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: usr-workshop
  namespace: workshop-demo
  labels:
    app: usr-workshop
    app.kubernetes.io/component: usr-workshop
    app.kubernetes.io/instance: usr-workshop
spec:
  to:
    kind: Service
    name: usr-workshop
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
